--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,127 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+body {
+  font-family: 'Open Sans', sans-serif;
+  width: 100%;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  font-size: 16px;
+  font-weight: 400;
+  padding: 0;
+  margin: 0;
 }
 
-.App-link {
-  color: #61dafb;
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
 }
 
-@keyframes App-logo-spin {
-  from {
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+/* global sections */
+main {
+  width: 100%;
+  margin: 0 auto;
+  padding: 2vh;
+  overflow: hidden;
+  max-width: 900px;
+  -webkit-box-flex: 1;
+  flex: 1;
+}
+section {
+  margin: 2vh auto;
+  width: 100%;
+}
+section h1 {
+  font-size: 40px;
+  font-weight: 500;
+  color: #311b92;
+  margin-bottom: 1rem;
+}
+section p {
+  color: #222;
+  font-size: 18px;
+  margin: 30px 0;
+  line-height: 1.5;
+}
+section#intro p {
+  color: #222;
+  font-size: 18px;
+  margin: 30px 0;
+  line-height: 1.5;
+}
+section em {
+  font-style: normal;
+  color: #000;
+  font-size: 20px;
+  padding-left: 10px;
+  border-left: 3px solid #d1c4e9;
+  display: inline-block;
+}
+
+/* Button */
+
+button {
+  border: 3px solid #ede7f6;
+  margin: 5px 0;
+  padding: 10px;
+  font-size: 16px;
+  border-radius: 3px;
+  transition: border-color 0.1s, box-shadow 0.1s;
+  color: #222;
+  line-height: 1.5;
+  width: 100px;
+  color: #673ab7;
+  background: #ede7f6;
+  cursor: pointer;
+  margin-top: 20px;
+  font-weight: 500;
+}
+
+button:hover {
+  box-shadow: 0 0 10px #d1c4e9;
+}
+
+button:active,
+button:focus {
+  border-color: #b39ddb;
+  outline: 0;
+}
+
+/* using loading.io css */
+
+.lds-ring {
+  display: inline-block;
+  position: relative;
+  width: 40px;
+  height: 40px;
+}
+.lds-ring div {
+  box-sizing: border-box;
+  display: block;
+  position: absolute;
+  width: 32px;
+  height: 32px;
+  margin: 4px;
+  border: 4px solid #000;
+  border-radius: 50%;
+  animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+  border-color: #000 transparent transparent transparent;
+}
+.lds-ring div:nth-child(1) {
+  animation-delay: -0.45s;
+}
+.lds-ring div:nth-child(2) {
+  animation-delay: -0.3s;
+}
+.lds-ring div:nth-child(3) {
+  animation-delay: -0.15s;
+}
+@keyframes lds-ring {
+  0% {
     transform: rotate(0deg);
   }
-  to {
+  100% {
     transform: rotate(360deg);
   }
 }
