--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -1,44 +1,51 @@
-.main-container{
-    width: 100%;
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: row;
-}
-.logo{
-    font-size: 2vw;
-    display: flex;
-    justify-content: flex-start;
-    padding-left: 100px;
-    align-items: center;
-    width: 30%;
-}
-.logo-link{
-    text-decoration: none;
-}
-.nav{
-    display: flex;
-    justify-content: flex-end;
-}
-.nav-item{
-    padding: 0px 10px;
-    list-style: none;
-    font-size: 2vw;
-    margin: 10px;
-}
-.item-link{
-    display: inline-block;
-    color: rgb(15, 15, 15);
-    text-decoration: none;
-}
-.item-link::after {
-    content: '';
-    display: block;
-    width: 0;
-    height: 2px;
-    background: rgb(26, 25, 25);
-    transition: width .3s;
-}
-.item-link:hover::after {
-    width: 100%;
+nav {
+  width: 100%;
+  max-width: 1000px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  box-shadow: none;
+  border-bottom: 1px solid;
 }
 
+nav ul {
+  display: flex;
+  overflow-x: auto;
+  padding: 2px 2vh;
+}
+
+li {
+  list-style-type: none;
+}
+
+nav a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 5px 10px;
+  padding: 5px 10px;
+  font-weight: 400;
+  font-size: 18px;
+  white-space: nowrap;
+}
+nav ul li:first-child a {
+  margin-left: 0;
+}
+
+.nav-link {
+  display: inline-block;
+  color: rgb(15, 15, 15);
+  text-decoration: none;
+}
+.nav-link::after {
+  content: '';
+  display: block;
+  width: 0;
+  height: 2px;
+  background: rgb(26, 25, 25);
+  transition: width 0.3s;
+}
+.nav-link:hover::after {
+  width: 100%;
+}
