--- a/client/src/components/CategoryCard/style.css
+++ b/client/src/components/CategoryCard/style.css
@@ -1,24 +1,23 @@
-.CCard{
-    border: 1px solid black;
-    display: flex;
-    flex-direction: column;
-    margin:auto;
-    width: 20%;
-    height: 20vh;
-    justify-content: center;
-    align-items: center;
-    border-radius: 10px;
+.CCard {
+  border: 2px solid #311b92;
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+  width: 100%;
+  height: 20vh;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10px;
 }
 
-.CCard > .title{
-    margin:10px;
-    padding: 10px;
-    border-radius: 10px;
-    font-size: 20px;
-    font-weight: bold;
+.CCard > .title {
+  margin: 10px;
+  padding: 10px;
+  border-radius: 10px;
+  font-size: 20px;
+  font-weight: 500;
 }
 
-
-.CCard > .Date{
-    font-size: 10px;
+.CCard > .Date {
+  font-size: 10px;
 }
